
DDMarlinPandora: Development package to integrate with DD4hep

N.Nikiforou 11/02/2016 (pm):
  - Major overhaul using the detector type flags throught the package. No more string processor parameters
    to access detectors.
  - Protected some more against uncaught exceptions, but still more work needed
  - Added more static helper functions to access extensions by data type flags

N.Nikiforou 11/02/2016 (am):
  - Modified DDTrackCreatorILD to use det type flags. Dropped tracker/vertex detector name parameters
  - Modified DDTrackCreatorILD to actually access hits in fit (offset 2) which is the definition now. 
    

N.Nikiforou 10/02/2016:
  - Started using the new facility by DD4hep that allows the accessing of detectors based on their
    detector type flags. For now, just DDTrackCreatorCLIC was modified. The Marlin Processor parameters
    associated with the vertex and tracker will soon be removed.

N.Nikiforou 07/09/2015:
  - Many changes that require full implemetation of DDRec structures for all subdetectors 
  - Introduced DDTrackCreatorBase class and derived implementation classes for ILD and CLIC
  - Removed references to "TPC" from DDTrackCreatorBase::Settings. Whatever was a configuration parameter
    has its relevant variable and Processor parameter names changed from "Tpc" to "BarrelTracker". Also, 
    moved any TPC geometry-related variables from DDTrackCreatorBase::Settings to DDTrackCreatorILD proper.
  - Added Parameter for DDPandoraPFANewProcessor: TrackCreatorName to select the relevant implementation 
    of DDTrackCreatorBase for the detector model in use (Curretly ILD or CLIC). Still need to implement
    a proper factory to select the proper algorithm. 


N. Nikiforou
v00-01

  - first version that 'runs' with CLIC_o2_v01 and ILD_o1_v05
 

********************  COPIED OVER FROM MARLINPANDORA REVISION 1934 ************************************************************************* 